cmake_minimum_required(VERSION 3.30)
project(Exemples_Cours_INF155 C)
set(CMAKE_C_STANDARD 11)

# Exemple pour le Cours 1
#add_subdirectory(Cours1)

# Exemple pour le Cours 2
#add_subdirectory(Cours2)

# Exemple pour le Cours 3
#add_subdirectory(Cours3)

# Exemple pour le Cours 4
#add_subdirectory(Cours4)

# Exemple pour le Cours 5
#add_subdirectory(Cours5)

# Exemple pour le Cours 6
#add_subdirectory(Cours6)

# Exemple pour le Cours 9
#add_subdirectory(Cours9)

# Exemple pour le Cours 10
#add_subdirectory(Cours10)

# Exemple pour le Cours 11
add_subdirectory(Cours11)