# Par : David Beaulieu
# Date : 2025
# Utiliser pour controler les fichiers main du cours 1 à exécuter dans le projet
#

#add_executable(Cours1 a_principal.c)

#add_executable(Cours1 b_taille_des_types.c)

#add_executable(Cours1 c_inversion.c)

#add_executable(Cours1 d_calcul_salaire.c)

#add_executable(Cours1 d_structures_conditionnelles.c)

#add_executable(Cours1 e_type_et_io.c)

#add_executable(Cours1 f_age_minimum.c)

#add_executable(Cours1 g_calcul_salaire_if.c)

add_executable(Cours1 h_attribution_des_cotes.c)


