# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 10 à exécuter dans le projet
#

#add_executable(Cours10 allocationDynamique.c)

#add_executable(Cours10 matriceDynamique.c)

add_executable(Cours10 testChrono.c t_chrono.c)

#add_executable(Cours10 questions.c t_chrono.c)











