# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 12 à exécuter dans le projet
#

# Exemples de fichier texte
add_executable(Cours12 FichiersTextes/fichierTexte1.c)
#add_executable(Cours12 FichiersTextes/FichierHello.c)
#add_executable(Cours12 FichiersTextes/fichierTexte2.c)
#add_executable(Cours12 FichiersTextes/fichierTexte3.c)
#add_executable(Cours12 FichiersTextes/fichierTexte4.c)

# Exemples de fichier binaire
#add_executable(Cours12 FichiersBinaires/fichierBinaire1.c)
#add_executable(Cours12 FichiersBinaires/fichierBinaire2.c)
#add_executable(Cours12 FichiersBinaires/fichierBinaire3.c)
#add_executable(Cours12 FichiersBinaires/fichierBinaire4.c)





