# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 2 à exécuter dans le projet
#
add_executable(Cours2 utilisationFonction.c)

#add_executable(Cours2 exemplePermissions.c)

#add_executable(Cours2 exempleConversion.c)

#add_executable(Cours2 exempleWhile.c)

#add_executable(Cours2 exempleFor.c)

#add_executable(Cours2 pyramide.c)

#add_executable(Cours2 afficheBinaire.c)

#add_executable(Cours2 genAlea.c)

#add_executable(Cours2 trouverNombre.c)

#add_executable(Cours2 exempleDeTrace.c)









