# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 3 à exécuter dans le projet
#

#add_executable(Cours2 minimum.c)

#add_executable(Cours2 permissionVersion2.c)

#add_executable(Cours2 factorielleSimple.c)

#add_executable(Cours2 factorielleVersion2.c)

#add_executable(Cours2 diviseurPremier.c)

#add_executable(Cours2 passValeurVsRef.c)

add_executable(Cours2 principal.c jeuxHasard.c)










