# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 3 à exécuter dans le projet
#

#add_executable(Cours3 minimum.c)

#add_executable(Cours3 permissionVersion2.c)

#add_executable(Cours3 factorielleSimple.c)

#add_executable(Cours3 factorielleVersion2.c)

#add_executable(Cours3 diviseurPremier.c)

#add_executable(Cours3 passValeurVsRef.c)

add_executable(Cours3 principal.c jeuxHasard.c)










