# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 4 à exécuter dans le projet
#

#add_executable(Cours4 inclinaisonFonctions.c)

#add_executable(Cours4 passValeurVsRef.c)
#add_executable(Cours4 agentSecret.c)
#add_executable(Cours4 operationsPointeur.c)

#add_executable(Cours4 declarationTableau.c)
#add_executable(Cours4 manipulationTableau.c)
#add_executable(Cours4 adresseTableau.c)
#add_executable(Cours4 tableauAvecBoucle.c)
add_executable(Cours4 tableauFonction.c)










