# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 6 à exécuter dans le projet
#

#add_executable(Cours6 caracteres.c)
#add_executable(Cours6 ctype.c)
#add_executable(Cours6 chaines.c)
#add_executable(Cours6 stringh.c)

#add_executable(Cours6 extraireHeures.c)
#add_executable(Cours6 forceMotPasse.c)
add_executable(Cours6 validerSaisie.c)












