# Par : David Beaulieu
# Date : 2025
# Utiliser pour contrôler les fichiers main du cours 9 à exécuter dans le projet
#

#add_executable(Cours9 structLivre.c)
#add_executable(Cours9 ptrLivre.c)
#add_executable(Cours9 livreAvecAuteurs.c)
#add_executable(Cours9 malloc.c)
add_executable(Cours9 principal.c mLivre.c)












